debhelper (10.9) UNRELEASED; urgency=medium

  * debhelper.pod: Fix typo.
  * dh_fixperms: Reset permissions of .scss and .sass files to
    0644.  Thanks to Jonas Smedegaard for the suggestion.
    (Closes: #875586)
  * dh_shlibdeps: Disable unused file(1) tests.

 -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000

debhelper (10.8) unstable; urgency=medium

  [ Niels Thykier ]
  * Dh_Lib: Introduce a qx_cmd sub to behave like a mix of qx
    and doit (i.e. avoid the shell while capturing stdout).
  * dh_makeshlibs: Avoid forking a shell when calling objdump in
    compat 11.
  * dh_shlibdeps: Avoid forking a shell when calling file.
  * dh_shlibdeps: Avoid passing files with "newline" to
    subprocesses.
  * dh_installdocs: Ignore missing files in compat 11 for packages
    that are not processed (e.g. arch:all packages during a -B build).
    Thanks to Jens Reyer for reporting the issue.  (Closes: #870892)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * dh_compress: Avoid forking a shell for a find command.
  * dh_gconf: Ditto.
  * dh_installgsettings: Ditto.
  * dh_perl: Avoid forking a shell for a dpkg call.
  * dh_gencontrol: Set the priority of all dbgsym packages to
    optional to be compliant with Standards-Version 4.0.1.
    Thanks to Mattia Rizzolo for the report.  (Closes: #870905)
  * dh_installdocs: Accept "nodoc" via DEB_BUILD_OPTIONS as well.
    Thanks to Sébastien Villemot for the suggestion.
    (Closes: #866619)
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * dh_installwm: Ditto.
  * debhelper.pod: Tweak text for some compat 11 changes.
  * dh_installdeb: Stop emitting versioned Pre-Depends on dpkg for
    symlink_to_dir and dir_to_symlink maintscripts.  The version
    requirements are satisfied in oldoldstable.
  * dh_installdocs: Merge two chmod calls to save a fork+exec.
  * dh_strip: Disable parallelism when --dbg-package is used as it