@@ -5,6 +5,10 @@ debhelper (10.9) UNRELEASED; urgency=medium
     0644.  Thanks to Jonas Smedegaard for the suggestion.
     (Closes: #875586)
   * dh_shlibdeps: Disable unused file(1) tests.
+  * dh_strip: In compat 11, rely on file headers/magic to
+    determine whether files are ELF binaries worth processing
+    instead of using filenames/extensions.  (Closes: #35733)
+  * dh_shlibdeps: Ditto.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 09 Sep 2017 15:32:22 +0000
 
